# ubc-pico-rtos

./: CMakeLists.txt
rtos/: FreeRTOSConfig.h
src/: CMakeLists.txt  main.c  vss.h
